workspace = { members = [
    "binance",
    "binance/spot",
    "binance/usdt",
    "logger",
    "pyalgo",
] }
[package]
name = "xcrypto"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.31"
log = "0.4.25"
openssl = "0.10.71"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
websocket = { package = "tokio-tungstenite", version = "0.26.2", features = [
    "native-tls",
] }
native-json = "1.2.10"
logger = { path = "logger" }
serde_json = "1.0.138"
base64 = "0.22.1"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
